--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.4/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
@@ -7,30 +7,42 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
-      "worker-configuration.d.ts",
-      "dist/**",
-      "drizzle/**",
-      "node_modules/**",
-      ".wrangler/**",
-      ".cursor/**",
-      ".git/**",
-      "coverage/**"
+    "includes": [
+      "**",
+      "!**/worker-configuration.d.ts",
+      "!**/dist/**",
+      "!**/drizzle/**",
+      "!**/node_modules/**",
+      "!**/.wrangler/**",
+      "!**/.cursor/**",
+      "!**/.git/**",
+      "!**/coverage/**"
     ]
   },
   "formatter": {
     "enabled": true,
     "indentStyle": "space"
   },
-  "organizeImports": {
-    "enabled": true
-  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
       "correctness": {
         "noUnusedImports": "error"
+      },
+      "style": {
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useConst": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       }
     }
   },
