--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "effect": "^3.14.19",
     "jose": "^6.0.11",
     "react": "19.2.0-canary-39cad7af-20250411",
+    "react-aria-components": "^1.8.0",
     "react-dom": "19.2.0-canary-39cad7af-20250411",
     "resend": "^4.5.1",
     "zod": "^3.24.4"
@@ -64,5 +65,5 @@
     "vitest": "^3.1.3",
     "wrangler": "^4.14.1"
   },
-  "packageManager": "pnpm@10.10.0"
+  "packageManager": "pnpm@10.11.0"
 }
