add design system library

--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,8 @@
       "!**/.wrangler/**",
       "!**/.cursor/**",
       "!**/.git/**",
-      "!**/coverage/**"
+      "!**/coverage/**",
+      "!**/styled-system/**"
     ]
   },
   "formatter": {
