--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "prepare": "panda codegen",
     "build": "vite build",
     "dev": "NODE_ENV=${NODE_ENV:-development} vite dev",
     "dev:init": "rw-scripts dev-init",
@@ -28,42 +29,52 @@
     "seed:global": "npm run worker:run ./src/infrastructure/persistence/global/d1/seed.ts",
     "seed:tenant": "npm run worker:run ./src/infrastructure/persistence/tenant/d1/seed.ts",
     "check": "npm run types",
-    "types": "npm run tsc"
+    "types": "npm run tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@effect/experimental": "^0.44.19",
+    "@effect/experimental": "^0.44.21",
     "@effect/platform": "^0.80.21",
-    "@redwoodjs/sdk": "0.0.78",
-    "better-auth": "^1.2.7",
+    "better-auth": "^1.2.8",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
-    "effect": "^3.14.19",
+    "effect": "^3.15.2",
     "jose": "^6.0.11",
+    "list": "link:../../Library/pnpm/global/5/node_modules/list",
+    "lucide-react": "^0.511.0",
     "react": "19.2.0-canary-39cad7af-20250411",
-    "react-aria-components": "^1.8.0",
+    "react-aria-components": "^1.9.0",
     "react-dom": "19.2.0-canary-39cad7af-20250411",
     "resend": "^4.5.1",
-    "zod": "^3.24.4"
+    "rwsdk": "^0.0.84",
+    "zod": "^3.25.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.0-beta.4",
-    "@cloudflare/vitest-pool-workers": "^0.8.24",
-    "@cloudflare/workers-types": "^4.20250505.0",
-    "@effect/vitest": "^0.21.2",
-    "@types/node": "^22.15.9",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
+    "@cloudflare/vitest-pool-workers": "^0.8.30",
+    "@cloudflare/workers-types": "^4.20250519.0",
+    "@effect/vitest": "^0.21.5",
+    "@pandacss/dev": "^0.53.6",
+    "@storybook/addon-essentials": "9.0.0-alpha.12",
+    "@storybook/react-vite": "9.0.0-rc.2",
+    "@types/node": "^22.15.19",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "@types/uuid": "^10.0.0",
-    "@vitest/coverage-v8": "^3.1.3",
+    "@vitest/coverage-v8": "^3.1.4",
     "drizzle-kit": "^0.31.1",
-    "miniflare": "^4.20250428.1",
-    "msw": "^2.7.6",
+    "miniflare": "^4.20250508.2",
+    "msw": "^2.8.4",
+    "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
+    "storybook": "9.0.0-rc.2",
     "tsx": "^4.19.4",
     "uuid": "^11.1.0",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.3",
-    "wrangler": "^4.14.1"
+    "vitest": "^3.1.4",
+    "wrangler": "^4.15.2"
   },
   "packageManager": "pnpm@10.11.0"
 }
