complete invitation logic

--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,9 @@
   "linter": {
     "enabled": true,
     "rules": {
+      "suspicious": {
+        "noConsole": "error"
+      },
       "recommended": true,
       "correctness": {
         "noUnusedImports": "error"
