--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dev": "NODE_ENV=${NODE_ENV:-development} vite dev",
     "dev:init": "rw-scripts dev-init",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
     "lint": "biome check ./src",
     "test:watch": "vitest --watch",
     "preview": "npm run build && npm run vite preview",
@@ -28,7 +30,8 @@
     "migrate:dev": "wrangler d1 migrations apply DB --local",
     "seed:global": "npm run worker:run ./src/infrastructure/persistence/global/d1/seed.ts",
     "seed:tenant": "npm run worker:run ./src/infrastructure/persistence/tenant/d1/seed.ts",
-    "check": "npm run types",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "types": "npm run tsc",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -41,33 +44,32 @@
     "better-auth": "^1.2.8",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
-    "effect": "^3.15.2",
+    "effect": "^3.16.0",
     "jose": "^6.0.11",
-    "list": "link:../../Library/pnpm/global/5/node_modules/list",
     "lucide-react": "^0.511.0",
     "react": "19.2.0-canary-39cad7af-20250411",
     "react-aria-components": "^1.9.0",
     "react-dom": "19.2.0-canary-39cad7af-20250411",
     "resend": "^4.5.1",
-    "rwsdk": "^0.0.84",
-    "zod": "^3.25.3"
+    "rwsdk": "^0.0.84"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.0-beta.4",
-    "@cloudflare/vitest-pool-workers": "^0.8.30",
-    "@cloudflare/workers-types": "^4.20250519.0",
+    "@cloudflare/vitest-pool-workers": "^0.8.33",
+    "@cloudflare/workers-types": "^4.20250528.0",
     "@effect/vitest": "^0.21.5",
-    "@pandacss/dev": "^0.53.6",
+    "@pandacss/dev": "^0.53.7",
     "@storybook/addon-essentials": "9.0.0-alpha.12",
     "@storybook/react-vite": "9.0.0-rc.2",
-    "@types/node": "^22.15.19",
-    "@types/react": "^19.1.4",
+    "@types/node": "^22.15.23",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.1.4",
+    "@vitest/ui": "3.1.4",
     "drizzle-kit": "^0.31.1",
-    "miniflare": "^4.20250508.2",
-    "msw": "^2.8.4",
+    "miniflare": "^4.20250523.0",
+    "msw": "^2.8.5",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "storybook": "9.0.0-rc.2",
@@ -76,7 +78,7 @@
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.4",
-    "wrangler": "^4.15.2"
+    "wrangler": "^4.17.0"
   },
   "packageManager": "pnpm@10.11.0"
 }
