--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -49,7 +49,8 @@
   },
 
   "vars": {
-    "SESSION_SECRET": "your-secret-key"
+    "SESSION_SECRET": "your-secret-key",
+    "SHOPIFY_WEBHOOK_SECRET": "7d6c7135aff1ed2b8962541c0462b8ca"
   },
 
   "routes": [
