add Shopify Oauth implementation

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -26,13 +26,20 @@
       {
         "name": "ORG_DO",
         "class_name": "OrganizationDurableObject"
+      },
+      {
+        "name": "SHOPIFY_OAUTH_DO",
+        "class_name": "ShopifyOAuthDurableObject"
       }
     ]
   },
   "migrations": [
     {
-      "new_sqlite_classes": ["OrganizationDurableObject"],
-      "tag": "v1"
+      "tag": "v1",
+      "new_sqlite_classes": [
+        "ShopifyOAuthDurableObject",
+        "OrganizationDurableObject"
+      ]
     }
   ],
 
@@ -50,7 +57,9 @@
 
   "vars": {
     "SESSION_SECRET": "your-secret-key",
-    "SHOPIFY_WEBHOOK_SECRET": "7d6c7135aff1ed2b8962541c0462b8ca"
+    "SHOPIFY_WEBHOOK_SECRET": "7d6c7135aff1ed2b8962541c0462b8ca",
+    "SHOPIFY_CLIENT_ID": "f665ecacb8ebb0109bd7994468b79d14",
+    "SHOPIFY_CLIENT_SECRET": "7d6c7135aff1ed2b8962541c0462b8ca"
   },
 
   "routes": [
