--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "migrate:dev": "wrangler d1 migrations apply DB --local",
     "seed:global": "npm run worker:run ./src/infrastructure/persistence/global/d1/seed.ts",
     "seed:tenant": "npm run worker:run ./src/infrastructure/persistence/tenant/d1/seed.ts",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "npm run types",
     "types": "npm run tsc",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
