--- a/shopify.app.nimblers.toml
+++ b/shopify.app.nimblers.toml
@@ -3,34 +3,37 @@
 client_id = "f665ecacb8ebb0109bd7994468b79d14"
 name = "nimblers"
 handle = "nimblers"
-application_url = "https://shopify.dev/apps/default-app-home"
+application_url = "https://nimblers.com/"
 embedded = true
 
 [build]
+automatically_update_urls_on_dev = true
+dev_store_url = "nimblers-dev.myshopify.com"
 include_config_on_deploy = true
 
 [webhooks]
 api_version = "2025-04"
 
-# GDPR Compliance Webhooks
-[[webhooks.compliance]]
-topic = "customers/data_request"
-endpoint = "/shopify/privacy/customers-data-request"
+  [[webhooks.subscriptions]]
+  uri = "/shopify/privacy/customers-data-erasure"
+  compliance_topics = [ "customers/redact" ]
 
-[[webhooks.compliance]]
-topic = "customers/redact"
-endpoint = "/shopify/privacy/customers-data-erasure"
+  [[webhooks.subscriptions]]
+  uri = "/shopify/privacy/customers-data-request"
+  compliance_topics = [ "customers/data_request" ]
 
-[[webhooks.compliance]]
-topic = "shop/redact"
-endpoint = "/shopify/privacy/shop-data-erasure"
+  [[webhooks.subscriptions]]
+  uri = "/shopify/privacy/shop-data-erasure"
+  compliance_topics = [ "shop/redact" ]
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "customer_read_customers,customer_read_orders,customer_read_store_credit_account_transactions,customer_read_store_credit_accounts,unauthenticated_read_product_listings"
 
 [auth]
-redirect_urls = [ "https://shopify.dev/apps/default-app-home/api/auth" ]
+redirect_urls = [
+  "https://nimblers.com/shopify/oauth/callback,http://localhost:5173/shopify/oauth/callback"
+]
 
 [pos]
 embedded = false
