--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "migrate:new": "drizzle-kit generate",
     "migrate:gateway": "drizzle-kit generate --config=drizzle.config.gateway.ts",
     "migrate:tenant": "drizzle-kit generate --config=drizzle.config.tenant.ts",
+    "migrate:shopify": "drizzle-kit generate --config=drizzle.config.shopify.ts",
     "migrate:dev": "wrangler d1 migrations apply DB --local",
     "seed:global": "npm run worker:run ./src/infrastructure/persistence/global/d1/seed.ts",
     "seed:tenant": "npm run worker:run ./src/infrastructure/persistence/tenant/d1/seed.ts",
