--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:ui": "vitest --ui",
     "lint": "biome check ./src",
     "test:watch": "vitest --watch",
-    "preview": "npm run build && npm run vite preview",
+    "preview": "npm run build && vite preview",
+    "preview:worker": "npm run build && wrangler dev dist/worker/worker.js --compatibility-date=2024-09-23 --local",
     "worker:run": "rw-scripts worker-run",
     "clean": "npm run clean:vite",
     "clean:vite": "rm -rf ./node_modules/.vite",
@@ -34,7 +35,8 @@
     "check": "npm run types",
     "types": "npm run tsc",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "knip": "knip"
   },
   "dependencies": {
     "@effect/experimental": "^0.44.21",
@@ -68,12 +70,14 @@
     "@vitest/coverage-v8": "^3.1.4",
     "@vitest/ui": "3.1.4",
     "drizzle-kit": "^0.31.1",
+    "knip": "^5.59.1",
     "miniflare": "^4.20250523.0",
     "msw": "^2.8.5",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "storybook": "9.0.0-rc.2",
     "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
