--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "effect": "^3.16.0",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
+    "nanoid": "^5.1.5",
     "react": "19.2.0-canary-39cad7af-20250411",
     "react-aria-components": "^1.9.0",
     "react-dom": "19.2.0-canary-39cad7af-20250411",
