remove unused Archive.zip file and update package.json and pnpm-lock.yaml to include new OpenTelemetry dependencies for improved observability; enhance wrangler.jsonc with additional observability settings; refactor Shopify OAuth service and related files for consistency and clarity; update tests to ensure proper handling of organization slugs and improve overall test coverage

--- a/package.json
+++ b/package.json
@@ -40,7 +40,13 @@
   },
   "dependencies": {
     "@effect/experimental": "^0.44.21",
+    "@effect/opentelemetry": "^0.50.4",
     "@effect/platform": "^0.80.21",
+    "@microlabs/otel-cf-workers": "1.0.0-rc.52",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.201.1",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-trace-base": "^2.0.1",
+    "@opentelemetry/sdk-trace-web": "^2.0.1",
     "@react-email/components": "^0.0.41",
     "@react-email/render": "^1.1.2",
     "better-auth": "^1.2.8",
