--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -52,7 +52,11 @@
   ],
 
   "observability": {
-    "enabled": true
+    "enabled": true,
+    "logs": {
+      "invocation_logs": true,
+      "head_sampling_rate": 1.0
+    }
   },
 
   "vars": {
