--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -72,7 +72,13 @@
     "OTEL_SERVICE_NAME": "nimblers-worker",
     "OTEL_SERVICE_VERSION": "1.0.0",
     "OTEL_EXPORTER_OTLP_ENDPOINT": "https://api.honeycomb.io/v1/traces",
-    "OTEL_EXPORTER_OTLP_HEADERS": "x-honeycomb-team=0YQfTrWYee6qkrNyHUcEBV"
+    "OTEL_EXPORTER_OTLP_HEADERS": "x-honeycomb-team=0YQfTrWYee6qkrNyHUcEBV",
+
+    // === Twilio Messaging Configuration ===
+    "TWILIO_ACCOUNT_SID": "ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
+    "TWILIO_AUTH_TOKEN": "your_auth_token_here",
+    "TWILIO_FROM_NUMBER": "+1234567890",
+    "TWILIO_WEBHOOK_URL": "https://nimblers.co/api/webhooks/twilio"
   },
 
   "routes": [
