--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@opentelemetry/sdk-trace-web": "^2.0.1",
     "@react-email/components": "^0.0.41",
     "@react-email/render": "^1.1.2",
+    "agents": "^0.0.95",
     "better-auth": "^1.2.8",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
