add Anthropic AI integration; update conversation handling to utilize Anthropic services, enhance message processing with unique external message ID, and improve error handling in conversation durable objects

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "knip": "knip"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.53.0",
     "@effect/experimental": "^0.44.21",
     "@effect/opentelemetry": "^0.50.4",
     "@effect/platform": "^0.80.21",
