--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -82,7 +82,7 @@
     "SHOPIFY_CLIENT_ID": "f665ecacb8ebb0109bd7994468b79d14",
     "SHOPIFY_CLIENT_SECRET": "7d6c7135aff1ed2b8962541c0462b8ca",
     "DEV_TUNNEL_URL": "https://fence-enlargement-submission-protective.trycloudflare.com",
-    "RESEND_API_KEY": "re_Usgg5eJS_Kcpyy8fqx9Nd2Jna2HjzuymA",
+    "RESEND_API_KEY": "XXXX",
     "HONEYCOMB_API_KEY": "0YQfTrWYee6qkrNyHUcEBV",
     "HONEYCOMB_DATASET": "nimblers",
     "OTEL_SERVICE_NAME": "nimblers-worker",
@@ -91,11 +91,11 @@
     "OTEL_EXPORTER_OTLP_HEADERS": "x-honeycomb-team=0YQfTrWYee6qkrNyHUcEBV",
 
     // === Twilio Messaging Configuration ===
-    "TWILIO_ACCOUNT_SID": "ACc2e8beb2a51c4007783c0dd0c1b3b8ff",
-    "TWILIO_AUTH_TOKEN": "026fbf41a09ac7d9646a238139037839",
-    "TWILIO_FROM_NUMBER": "+15392823029",
+    "TWILIO_ACCOUNT_SID": "XXXX",
+    "TWILIO_AUTH_TOKEN": "XXXX",
+    "TWILIO_FROM_NUMBER": "XXXX",
     "TWILIO_WEBHOOK_URL": "https://nimblers.co/api/webhooks/twilio",
-    "ANTHROPIC_API_KEY": "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"
+    "ANTHROPIC_API_KEY": "XXXX"
   },
 
   "ai": {
